# speaches

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  sitemap.xml
config/: local.env  runpod.env
configuration/: index.html
docs/: setup.md
livekit-agent/: agent.py  pyproject.toml
scripts/: start.sh
src/speaches/: hf_utils.py
